Survey Droid Changelog
----------------------
Version 0.7.0-beta:
	-Fixed SurveySurvice
	-Technical:
		-Converted SurveyService to use Alarms instead of Handlers; this seems to solve all the timing bugs.

Version 0.6.5-beta:
    -Technical:
        -Fixed race condition during database access.

Version 0.6.4-beta:
	-Created new mechanism for reporting information about fatal errors. Messages from errors that crashed the app will now be emailed to Austin.
	-More work on the Survey Service
	-Technical:
		-Added trace.jar, which contains the error reporting code under an MIT liscense.

Version 0.6.3-beta:
	-Badly written surveys should provide a more descriptive error message when they crash.
	-Hopefully fixed SurveyService issues
	-Removed send photo option for now
	-Technical:
		-Re-enabled log toasts; set most calls to logging functions to pass in null for the context
		-Config.D is now set at startup by inspecting the manifest file's debuggable key

Version 0.6.2-beta:
	-Moved survey next/back buttons to the top of the screen.
	-Technical:
		-Fixed bugs in SurveyService that were causing weird things to happen.
		-Fixed a potential race condition in ConfirmSubmitActivity.

Version 0.6.1-beta:
	-Scheduling seems to be working better now.
	-Technical:
		-Switched SurveyScheduler to use id + time as the data uri.  Used 0 for the request code on all alarms.
		-Fixed a bug that caused the SurveyService to ignore timed surveys.
		-The BootIntentReciever does not run the scheduler; instead, it is run after a pull.

Version 0.6.0-beta:
	-Started keeping a changelog.
	-Surveys work much better:
	    -User-initiated surveys that are dismissed or time out are not reported at all (it's assumed they were started by mistake).
	    -Notifications only show one survey at a time (the one that will time out soonest).
	    -Clearing the notification only cancels one survey.
	    -While a survey is active, the notification changes to reflect this.