@@ -1,12 +1,13 @@
 <?php
 /*---------------------------------------------------------------------------*
- * views/answers/error.ctp                                                   *
+ * views/answers/salt.ctp                                                    *
  *                                                                           *
- * Used when phones need to report an unhandled exception to the system.     *
+ * Lets phones get the salt string from the server.                          *
  *---------------------------------------------------------------------------*/
 if ($result === false)
 {
 	$this->error(400, 'Bad Request', "failure: $message");
 	exit;
 }
+echo $result;
 ?>
